24/5/2013 versione 1.1 released
	  changet pull setting to None to "float"
	  bug setting bouncetime

 5/5/2013 version 1.0 released