@@ -1,7 +1,7 @@
 [dbusgpiod]
 
-user     = dbusgpio
-group    = dbusgpio
+# user     = dbusgpio
+# group    = dbusgpio
 
 logfile  = '/var/log/dbusgpio/dbusgpiod.log'
 errfile  = '/var/log/dbusgpio/dbusgpiod.err'
@@ -12,13 +12,17 @@ lockfile = '/var/run/dbusgpio/dbusgpiod.lock'
 # parameters/options.
 #       Example: <listen>unix:path=/tmp/foo</listen>
 #       Example: <listen>tcp:host=localhost,port=1234</listen>
+#
+# you can use the keyword "sessionbus" or "systembus"
 #busaddress='tcp:host=localhost,port=1234'
+
+busaddress='systembus'
 pinlist= 18,23,24
 
 [dbusd]
 
-user     = dbusgpio
-group    = dbusgpio
+# user     = dbusgpio
+# group    = dbusgpio
 
 logfile  = '/var/log/dbusgpio/dbusd.log'
 errfile  = '/var/log/dbusgpio/dbusd.err'
