@@ -1,3 +1,6 @@
+22/8/2014
+	now is possible to use the keyword "sessionbus" or "systembus" in configuration
+
 24/5/2013 versione 1.1 released
 	  changet pull setting to None to "float"
 	  bug setting bouncetime
